# iam-role-assumer

./: .gitignore  README.md  clean.sh  requirements.txt  setup.cfg  setup.py
iam_role_assumer/: __init__.py  command.py
