[bumpversion]
current_version = 0.0.2
commit = True
tag = False

[bumpversion:file:README.md]

[bumpversion:file:setup.py]

[bumpversion:file:iam_role_assumer/__init__.py]

[bumpversion:file:iam_role_assumer/command.py]

[metadata]
description-file = README.md
url = https://github.com/muckamuck/iam-role-assumer

